# agent_ontology

./: .gitignore  AGENTS.md  CLAUDE.md  EVOLUTION_STRATEGY.md  LANDSCAPE.md  ONTOLOGY.yaml  README.md  ROADMAP.md  SPEC.md  VISION.md  analyze_trace.py  benchmark.py  comparative_report.py  complexity.py  compose.py  coverage.py  dashboard.py  evolution_results.json  evolve.py  gaps.md  import_langgraph.py  instantiate.py  lint.py  mermaid.py  migrate.py  mutate.py  ontology_owl.py  ontology_rdf.py  owl_bridge.py  patterns.py  pyproject.toml  requirements-dev.txt  requirements.txt  similarity.py  spec-viewer.html  spec_schema.json  specgen.py  test_agents.py  test_properties.py  test_specgen.py  (+1 more)
.github/workflows/: validate.yml
agent_ontology/: ONTOLOGY.yaml  __init__.py  analyze_trace.py  benchmark.py  compose.py  coverage.py  dashboard.py  design.py  evolve.py  import_autogen.py  import_crewai.py  import_google_adk.py  import_langgraph.py  import_openai_agents.py  ingest.py  instantiate.py  knowledge_store.py  mermaid.py  migrate.py  mutate.py  ontology_owl.py  owl_bridge.py  patterns.py  recommend.py  spec_diff.py  spec_schema.json  specgen.py  topology.py  validate.py  verify.py
agents/: alpha_geometry_agent.py  autogpt_agent.py  babyagi_agent.py  babyagi_autogen_agent.py  claude_code_agent.py  code_reviewer_agent.py  crew_agent.py  customer_support_swarm_agent.py  debate_agent.py  kb_react_agent.py  kg_rag_agent.py  lats_agent.py  map_reduce_agent.py  meta_prompting_agent.py  minimal_solver_agent.py  mixture_of_agents_agent.py  multi_agent_codegen_agent.py  multidoc_baseline_agent.py  multidoc_structured_agent.py  mutator_agent.py  pddl_planner_agent.py  plan_and_solve_agent.py  rag_agent.py  rap_agent.py  react_agent.py  reflexion_agent.py  self_improver_agent.py  self_refine_agent.py  socratic_tutor_agent.py  software_team_agent.py  tree_of_thought_agent.py  voyager_agent.py
agents_lg/: alpha_geometry_agent_lg.py  autogpt_agent_lg.py  babyagi_agent_lg.py  babyagi_autogen_agent_lg.py  claude_code_agent_lg.py  code_reviewer_agent_lg.py  crew_agent_lg.py  customer_support_swarm_agent_lg.py  debate_agent_lg.py  kb_react_agent_lg.py  kg_rag_agent_lg.py  lats_agent_lg.py  map_reduce_agent_lg.py  meta_prompting_agent_lg.py  minimal_solver_agent_lg.py  mixture_of_agents_agent_lg.py  multi_agent_codegen_agent_lg.py  multidoc_baseline_agent_lg.py  multidoc_structured_agent_lg.py  mutator_agent.py  pddl_planner_agent_lg.py  plan_and_solve_agent_lg.py  rag_agent_lg.py  rap_agent_lg.py  react_agent_lg.py  reflexion_agent_lg.py  self_improver_agent_lg.py  self_refine_agent_lg.py  socratic_tutor_agent_lg.py  software_team_agent.py  software_team_agent_lg.py  tree_of_thought_agent_lg.py  voyager_agent_lg.py
benchmarks/: __init__.py  compatibility.py  scoring.py
compose_specs/: decompose_debate.yaml  rag_reflection.yaml  react_refine.yaml
specs/: autogpt.yaml  babyagi.yaml  babyagi_autogen.yaml  claude-code.yaml  code_reviewer.yaml  crew.yaml  customer_support_swarm.yaml  debate.yaml  lats.yaml  map_reduce.yaml  meta_prompting.yaml  mixture_of_agents.yaml  plan_and_solve.yaml  rag.yaml  react.yaml  reflexion.yaml  self_refine.yaml  socratic_tutor.yaml  software_team.yaml  tree_of_thought.yaml
test_descriptions/: lats.md  map_reduce.md  multi_agent_codegen.md  panel_review.md  socratic_tutor.md  toolformer.md  tree_of_thought.md  voyager.md
tests/: test_agents.py  test_properties.py  test_roundtrip.py  test_specgen.py
(+36 files in other folders)
